--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "cineworld",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "netflix-reactjs",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@smastrom/react-rating": "^1.5.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
-    "framer-motion": "^12.0.1",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
+    "react-star-ratings": "^2.3.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "react-hot-loader": "^4.13.1",
     "sass": "^1.83.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-textshadow": "^2.1.3",
     "vite": "^6.0.11"
   }
 }
