--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "netflix-reactjs",
-  "private": true,
-  "version": "0.0.0",
+  "name": "cineworld",
+  "version": "1.0.0",
+  "description": "",
   "type": "module",
   "scripts": {
     "dev": "vite",
