--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+tools/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -24,3 +25,4 @@ dist-ssr
 *.sln
 *.sw?
 .cursorrules
+.cursorrules.txt
