--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss7-compat": "^2.2.17",
@@ -16,10 +17,12 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
     "react-star-ratings": "^2.3.0",
