feat: Update RowPost component with improved list interaction and styling; add new file patterns to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 .env
+########################
+*.pkl
+*.index
+*.csv
+*.py
+*.json
+########################
 node_modules
 dist
 dist-ssr
