--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
