chore: Refine .gitignore for clarity and organization - Updated .gitignore to better categorize ignored files, including clearer sections for logs, build output, dependencies, and environment variables. - Removed unnecessary entries and ensured proper formatting for improved readability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Logs
-logs
+# Node.js and build logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,24 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-
-########################
-*.py
-*.pt
-*.index
-*.csv
-*.json
-########################
-node_modules
-dist
-dist-ssr
+# Build output
+dist/
+dist-ssr/
 *.local
+
+# Dependencies
+node_modules/
+
+# Environment variables
+.env
 
 # Editor directories and files
 .vscode/*
-tools/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -33,4 +30,3 @@ tools/*
 *.sw?
 .cursorrules
 .cursorrules.txt
-.env
