--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.83.4",
     "tailwindcss": "^3.2.4",
     "tailwindcss-textshadow": "^2.1.3",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
